修复燃料棒合成NBT